# neural_network

./: CMakeLists.txt  MNIST_1.model  README.md
app/: drawingcanvas.cpp  drawingcanvas.h  window.cpp  window.h
docx/: 1.aux  1.fdb_latexmk  1.fls  1.tex  tran.zsh
docx/file_docx/: .~lock.附件2_实习论文.docx#  2.docx  附件1_实施计划书.docx
latex/baogao/: 1.aux  1.fdb_latexmk  1.fls  1.tex  1.xdv
models/: MNIST_1.model
src/core/: CsvDataSet.cpp  CsvDataSet.h  DataLoader.h  DataSet.h  Graph.cpp  Graph.h  Matrix.cpp  Matrix.h  Node.cpp  Node.h
src/ops/: noise.cpp  noise.h  ops.cpp  ops.h
src/stb/: LoadImage.cpp  LoadImage.h  SaveImage.cpp  SaveImage.h  stb_image.h
test/: load_code.cpp  main.cpp  read_csv_for_image.cpp  test_Matrix.cpp  test_loadImage_SaveImage.cpp  test_load_image.cpp  test_ops_and_transpose.cpp  test_transform_image_csv.cpp  tran_0_1.cpp
training/: train.cpp
window/: drawingcanvas.cpp  drawingcanvas.h  main_window.cpp  window.cpp  window.h
